# quickslurm

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/old_workflows/: generate-docs.yml  lint-and-pytest.yml
.github/workflows/: build-and-publish-to-pypi.yml  build-and-publish.yml  docs-build-and-publish.yml  generate-docs.yml  lint-and-pytest.yml  publish-to-pypi-on-release.yml  python-package.yml  slurm_integration_test.yml
docker/: docker-compose.yml
docs/: index.md
docs/api/: quickslurm.md
easyslurm/: easyslurm.py
src/easyslurm/: __init__.py  easyslurm.py
src/quickslurm/: __init__.py  data.py  quickslurm.py  utils.py
tests/: test_easyslurm.py  test_quickslurm.py  test_slurm_integrations.py
