[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "quickslurm"          # change if name is taken on PyPI
dynamic = ["version"]
description = "A lightweight Python wrapper for Slurm sbatch/srun with robust subprocess handling and optional logging."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Buettner", email = "alex.buettner93@gmail.com" },
    { name = "Jack Quimby", email = "jack.quimby54@gmail.com" }
]
keywords = ["slurm", "sbatch", "srun", "hpc", "cluster", "wrapper", "quickslurm", "quick"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering"
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "mkdocs-include-markdown-plugin"
]

[project.urls]
Homepage = "https://github.com/quickslurm/quickslurm"
Repository = "https://github.com/quickslurm/quickslurm"
Issues = "https://github.com/quickslurm/quickslurm/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/quickslurm/_version.py"
template = """
# Generated by hatch-vcs
__version__ = "{version}"
"""

[tool.hatch.build]
# Include only needed files
include = [
    "src/quickslurm/**",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/quickslurm"]
# Explicitly include the version file
artifacts = ["src/quickslurm/_version.py"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "tests", "docs"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
